# Second-Handed

./: .env.example  .gitignore  LICENSE  README.md  main.py  package.json  pyproject.toml  tsconfig.json
client/: index.html  publish.html  trade.html
client/features/api/: trade.ts
client/features/application/chat/: handlers.ts  index.ts  session.ts  state.ts  types.ts
client/features/application/trade/: state.ts
client/features/chat/: handlers.ts  index.ts  normalize.ts  session.ts  state.ts
client/features/crypto/: aes.ts  encoding.ts  fingerprint.ts  hash.ts  index.ts  sign.ts  types.ts
client/features/trade/: domain.ts  state.ts
client/features/ui/: keymgr.ts
client/js/: api.js  chat.js  crypto.js  keymgr.js  trade.js
client/ts/: api.ts  chat.ts  crypto.ts  keymgr.ts  trade.ts
scripts/: build-client-pages.mjs
server/: app.py
server/api/: chat_api.py  trade_api.py
server/application/blockchain/: service.py
server/application/chat/: broker.py  service.py
server/application/trade/: service.py
server/crypto/: hash.py
server/db/: blocks.py  chats.py  mysql.py  trades.py
server/domain/crypto/: hash.py  verify.py
server/infrastructure/config/: logging.py  settings.py
server/infrastructure/db/: blocks.py  chats.py  mysql.py  trades.py
server/infrastructure/messaging/: redis_chat_broker.py
server/interfaces/http/: app.py
server/models/: block.py  trade.py
server/services/: blockchain.py  chat_service.py  trade_service.py
tests/: conftest.py
tests/interfaces/http/: test_chat_api.py  test_trade_api.py
(+26 files in other folders)
