[project]
name = "second-handed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.4",
    "fastapi>=0.128.6",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.2",
    "redis>=5.2.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]
